--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 obj
 bin
+PublishProfiles
 _ReSharper.*
 *.csproj.user
 *.resharper.user
@@ -11,13 +12,7 @@ _ReSharper.*
 *.sdf
 *.opensdf
 *.DotSettings.user
-Install/Publish/
-Evidence Library/build
-Hosted Services/build
 OADSI.exe.config
-WatchGuard.Evidence.Thumbnail.exe.config
-WatchGuard.client.config
-STS/build
 *.ncrunchsolution
 *.ncrunchproject
 *.ncrunchsolution.user
