--- a/FlashCards/ProvenStyle.FlashCards.csproj
+++ b/FlashCards/ProvenStyle.FlashCards.csproj
@@ -308,6 +308,7 @@
     <Content Include="Content\font\fontawesome-webfont.eot" />
     <Content Include="Content\font\FontAwesome.otf" />
     <Content Include="readme.md" />
+    <None Include="Properties\PublishProfiles\flashcards.provenstyle.com.pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
