--- a/FlashCards/Web.config
+++ b/FlashCards/Web.config
@@ -25,6 +25,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
+    <customErrors mode="Off"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
