--- a/FlashCards/ProvenStyle.FlashCards.csproj
+++ b/FlashCards/ProvenStyle.FlashCards.csproj
@@ -228,7 +228,9 @@
     <Content Include="App\viewmodels\cards.js" />
     <Content Include="App\viewmodels\shell.js" />
     <Content Include="App\viewmodels\library.js" />
+    <Content Include="App\viewmodels\_cardsFooter.js" />
     <Content Include="App\views\cards.html" />
+    <Content Include="App\views\_cardsFooter.html" />
     <Content Include="App\views\shell.html" />
     <Content Include="App\views\library.html" />
     <Content Include="Content\app.css" />
