Moving a div so I can spit out the card

--- a/FlashCards/ProvenStyle.FlashCards.csproj
+++ b/FlashCards/ProvenStyle.FlashCards.csproj
@@ -231,7 +231,7 @@
     <Content Include="App\viewmodels\_cardsControls.js" />
     <Content Include="App\viewmodels\_cardsFooter.js" />
     <Content Include="App\views\cards.html" />
-    <Content Include="App\views\_cardsContols.html" />
+    <Content Include="App\views\_cardsControls.html" />
     <Content Include="App\views\_cardsFooter.html" />
     <Content Include="App\views\shell.html" />
     <Content Include="App\views\library.html" />
