--- a/FlashCards/ProvenStyle.FlashCards.csproj
+++ b/FlashCards/ProvenStyle.FlashCards.csproj
@@ -228,6 +228,8 @@
     <Content Include="App\viewmodels\cards.js" />
     <Content Include="App\viewmodels\shell.js" />
     <Content Include="App\viewmodels\library.js" />
+    <Content Include="App\viewmodels\_cardsBody.js" />
+    <Content Include="App\views\_cardsBody.html" />
     <Content Include="App\viewmodels\_cardsControls.js" />
     <Content Include="App\viewmodels\_cardsFooter.js" />
     <Content Include="App\views\cards.html" />
