--- a/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards.csproj
@@ -133,11 +133,20 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="App\main.js" />
+    <Content Include="App\mockData\durandal.js" />
+    <Content Include="App\mockData\multiplication.js" />
+    <Content Include="App\mockData\requirejs.js" />
+    <Content Include="App\mockData\statesAndCapitals.js" />
+    <Content Include="App\models\card.js" />
     <Content Include="App\services\flashCardService.js" />
     <Content Include="App\viewmodels\about.js" />
+    <Content Include="App\views\cardBody.html" />
+    <Content Include="App\viewmodels\cards.js" />
     <Content Include="App\viewmodels\catalog.js" />
     <Content Include="App\viewmodels\shell.js" />
     <Content Include="App\views\about.html" />
+    <Content Include="App\views\cardControls.html" />
+    <Content Include="App\views\cards.html" />
     <Content Include="App\views\catalog.html" />
     <Content Include="App\views\shell.html" />
     <Content Include="Content\app.css" />
