--- a/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards.csproj
@@ -138,6 +138,8 @@
     <Content Include="App\mockData\requirejs.js" />
     <Content Include="App\mockData\statesAndCapitals.js" />
     <Content Include="App\models\card.js" />
+    <Content Include="App\models\random.js" />
+    <Content Include="App\models\selectedCards.js" />
     <Content Include="App\services\flashCardService.js" />
     <Content Include="App\viewmodels\about.js" />
     <Content Include="App\cards\card.js" />
