--- a/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards.csproj
@@ -143,13 +143,13 @@
     <Content Include="App\models\selectedCards.js" />
     <Content Include="App\services\flashCardService.js" />
     <Content Include="App\viewmodels\about.js" />
-    <Content Include="App\cards\card.js" />
-    <Content Include="App\cards\card.html" />
-    <Content Include="App\cards\index.js" />
+    <Content Include="App\viewmodels\card.js" />
+    <Content Include="App\views\card.html" />
+    <Content Include="App\viewmodels\cards.js" />
     <Content Include="App\viewmodels\catalog.js" />
     <Content Include="App\viewmodels\shell.js" />
     <Content Include="App\views\about.html" />
-    <Content Include="App\cards\index.html" />
+    <Content Include="App\views\cards.html" />
     <Content Include="App\views\catalog.html" />
     <Content Include="App\views\shell.html" />
     <Content Include="Content\app.css" />
