--- a/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards.csproj
@@ -153,15 +153,12 @@
     <Content Include="App - Durandal\views\catalog.html" />
     <Content Include="App - Durandal\views\shell.html" />
     <Content Include="App\main.js" />
-    <Content Include="App\mockData\durandal.js" />
+    <Content Include="App\mockData\angular.js" />
     <Content Include="App\mockData\multiplication.js" />
-    <Content Include="App\mockData\requirejs.js" />
     <Content Include="App\mockData\statesAndCapitals.js" />
     <Content Include="App\models\card.js" />
     <Content Include="App\models\selectedCards.js" />
     <Content Include="App\services\flashCardService.js" />
-    <Content Include="App\viewmodels\card.js" />
-    <Content Include="App\views\card.html" />
     <Content Include="App\viewmodels\cards.js" />
     <Content Include="App\viewmodels\catalog.js" />
     <Content Include="App\viewmodels\shell.js" />
