Rewriting the mock data using factories

--- a/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards.csproj
@@ -134,36 +134,35 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Content Include="App - Durandal\main.js" />
-    <Content Include="App - Durandal\mockData\durandal.js" />
-    <Content Include="App - Durandal\mockData\multiplication.js" />
-    <Content Include="App - Durandal\mockData\requirejs.js" />
-    <Content Include="App - Durandal\mockData\statesAndCapitals.js" />
-    <Content Include="App - Durandal\models\card.js" />
-    <Content Include="App - Durandal\models\random.js" />
-    <Content Include="App - Durandal\models\selectedCards.js" />
-    <Content Include="App - Durandal\services\flashCardService.js" />
-    <Content Include="App - Durandal\viewmodels\about.js" />
-    <Content Include="App - Durandal\viewmodels\card.js" />
-    <Content Include="App - Durandal\viewmodels\cards.js" />
-    <Content Include="App - Durandal\viewmodels\catalog.js" />
-    <Content Include="App - Durandal\viewmodels\shell.js" />
-    <Content Include="App - Durandal\views\about.html" />
-    <Content Include="App - Durandal\views\card.html" />
-    <Content Include="App - Durandal\views\cards.html" />
-    <Content Include="App - Durandal\views\catalog.html" />
-    <Content Include="App - Durandal\views\shell.html" />
+    <Content Include="App-Durandal\main.js" />
+    <Content Include="App-Durandal\mockData\durandal.js" />
+    <Content Include="App-Durandal\mockData\multiplication.js" />
+    <Content Include="App-Durandal\mockData\requirejs.js" />
+    <Content Include="App-Durandal\mockData\statesAndCapitals.js" />
+    <Content Include="App-Durandal\models\card.js" />
+    <Content Include="App-Durandal\models\random.js" />
+    <Content Include="App-Durandal\models\selectedCards.js" />
+    <Content Include="App-Durandal\services\flashCardService.js" />
+    <Content Include="App-Durandal\viewmodels\about.js" />
+    <Content Include="App-Durandal\viewmodels\card.js" />
+    <Content Include="App-Durandal\viewmodels\cards.js" />
+    <Content Include="App-Durandal\viewmodels\catalog.js" />
+    <Content Include="App-Durandal\viewmodels\shell.js" />
+    <Content Include="App-Durandal\views\about.html" />
+    <Content Include="App-Durandal\views\card.html" />
+    <Content Include="App-Durandal\views\cards.html" />
+    <Content Include="App-Durandal\views\catalog.html" />
+    <Content Include="App-Durandal\views\shell.html" />
     <Content Include="App\configs\routeConfig.js" />
     <Content Include="App\controllers\catalogController.js" />
     <Content Include="App\flashCardsModule.js" />
-    <Content Include="App\mockData\angular.js" />
-    <Content Include="App\mockData\multiplication.js" />
-    <Content Include="App\mockData\statesAndCapitals.js" />
-    <Content Include="App\models\card.js" />
+    <Content Include="App\mockData\angularMockData.js" />
+    <Content Include="App\mockData\multiplicationMockData.js" />
+    <Content Include="App\mockData\statesAndCapitalsMockData.js" />
+    <Content Include="App\models\cardFactory.js" />
     <Content Include="App\models\selectedCards.js" />
     <Content Include="App\services\flashCardService.js" />
     <Content Include="App\viewmodels\cards.js" />
-    <Content Include="App\viewmodels\catalog.js" />
     <Content Include="App\views\cards.html" />
     <Content Include="App\views\catalog.html" />
     <Content Include="Content\app.css" />
